brat/test/golden/error/toplevel-leftovers2.brat.golden
Error in test/golden/error/toplevel-leftovers2.brat on line 2:
f(x) = x
       ^

  Type mismatch when checking x => 「x」

Expected: (a1 :: Nat), (b1 :: Bool)
But got:  (a1 :: Nat)


